@@ -415,76 +415,6 @@ public class RdbTaskStorage extends TaskStorage {
      * {@inheritDoc}
      */
     @Override
-    public SearchIterator listModifiedTasks(final Context ctx,
-        final int folderId, final StorageType type, final int[] columns,
-        final Date since, final boolean onlyOwn, final int userId,
-        final boolean noPrivate) throws TaskException {
-        final StringBuilder sql = new StringBuilder();
-        sql.append("SELECT ");
-        sql.append(SQL.getFields(columns, false));
-        sql.append(" FROM ");
-        final String taskTable = SQL.TASK_TABLES.get(type);
-        sql.append(taskTable);
-        sql.append(" JOIN ");
-        sql.append(SQL.FOLDER_TABLES.get(type));
-        sql.append(" USING (cid,id) WHERE ");
-        sql.append(taskTable);
-        sql.append(".cid=? AND folder=? AND last_modified>=?");
-        if (onlyOwn) {
-            sql.append(ONLY_OWN);
-        }
-        if (noPrivate) {
-            sql.append(NO_PRIVATE);
-        }
-        if (StorageType.DELETED == type) {
-            sql.append(" UNION SELECT ");
-            sql.append(SQL.getFields(columns, false));
-            sql.append(" FROM task JOIN task_removedparticipant ON ");
-            sql.append("task.cid=task_removedparticipant.cid AND ");
-            sql.append("task.id=task_removedparticipant.task ");
-            sql.append("WHERE task.cid=? AND folder=? AND last_modified>=?");
-            if (onlyOwn) {
-                sql.append(ONLY_OWN);
-            }
-            if (noPrivate) {
-                sql.append(NO_PRIVATE);
-            }
-        }
-        Connection con = null;
-        try {
-            con = DBPool.pickup(ctx);
-            final PreparedStatement stmt = con.prepareStatement(sql.toString());
-            int pos = 1;
-            stmt.setInt(pos++, ctx.getContextId());
-            stmt.setInt(pos++, folderId);
-            stmt.setLong(pos++, since.getTime());
-            if (onlyOwn) {
-                stmt.setInt(pos++, userId);
-            }
-            if (StorageType.DELETED == type) {
-                stmt.setInt(pos++, ctx.getContextId());
-                stmt.setInt(pos++, folderId);
-                stmt.setLong(pos++, since.getTime());
-                if (onlyOwn) {
-                    stmt.setInt(pos++, userId);
-                }
-            }
-//            return new PrefetchIterator(new TaskIterator(ctx, userId,
-//                stmt.executeQuery(), folderId, columns, type));
-            return new TaskIterator(ctx, userId, stmt.executeQuery(),
-                folderId, columns, type);
-        } catch (SQLException e) {
-            DBPool.closeWriterSilent(ctx, con);
-            throw new TaskException(Code.SQL_ERROR, e, e.getMessage());
-        } catch (DBPoolingException e) {
-            throw new TaskException(Code.NO_CONNECTION, e);
-        }
-    }
-
-    /**
-     * {@inheritDoc}
-     */
-    @Override
     SearchIterator search(final SessionObject session,
         final TaskSearchObject search, final int orderBy, final String orderDir,
         final int[] columns, final List<Integer> all, final List<Integer> own,
